test/custom/inference/bad/typeclass_unsat.mlt
class K 'a { h : 'a }
let x : int = h
